syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Category {
    string id =1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest {
    string name =1;
    string description =2;
}

message CategoryResponse {
    Category Category = 1;
}

message CategoryList {
    repeated Category categories =1;
}

message blank{}

message CategoryGetByIDRequest {
    string id = 1;
}


service CategoryService {
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList) {}
    rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
    rpc ListCategories(blank) returns(CategoryList) {}
    rpc GetCategory(CategoryGetByIDRequest) returns (Category) {}
}