package service

import (
	"context"

	"github.com/Genarodaniel/go-grpc-study/internal/database"
	"github.com/Genarodaniel/go-grpc-study/internal/pb"
)

type CategoryService struct {
	pb.UnimplementedCategoryServiceServer
	CategoryDB database.Category
}

func NewCategoryService(categoryDB database.Category) *CategoryService {
	return &CategoryService{
		CategoryDB: categoryDB,
	}
}

func (c *CategoryService) CreateCategory(ctx context.Context, request *pb.CreateCategoryRequest) (*pb.Category, error) {
	category, err := c.CategoryDB.Create(request.Name, request.Description)
	if err != nil {
		return nil, err
	}

	return &pb.Category{
		Name:        category.Name,
		Id:          category.ID,
		Description: category.Description,
	}, nil
}
